--- a/style.css
+++ b/style.css
@@ -4,37 +4,18 @@ body {
   font-family: 'Asap', sans-serif;
 }
 
+header {
+  height: 40vh;
+  width: 100%;
+  background: url('/images/magnolia.jpeg') no-repeat center center;
+  background-size: cover;
+  margin: 0;
+}
+
 .social-icons img {
   height: 50px;
   width: 50px;
 }
-
-header, footer {
-  height: 100px;
-  width: 100%;
-  background-color: #A5C4D4;
-}
-
-header h1, header div {
-  display: inline-block;
-}
-
-header div {
-  display: flex;
-  justify-content: flex-end;
-  background-color: none;
-}
-
-header div a {
-  margin-left: 1rem;
-  text-decoration: none;
-}
-
-/*#headerBar {
-  background-color: gray;
-  height: 50px;
-  width: 100%;
-}*/
 
 .social-icons {
   display: flex;
