add publication links and logos, add bottom margins to link logos

--- a/style.css
+++ b/style.css
@@ -22,13 +22,7 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.frogfriend {
-  height: 200px;
-  width: 225px;
-  border-radius: 20%;
-  margin-bottom: 10px;
+  margin-top: 40px;
 }
 
 section h3 {
@@ -40,6 +34,7 @@ section h3 {
   width: 50px;
   display: inline-block;
   margin-right: 20px;
+  margin-bottom: 20px;
 }
 
 footer {
@@ -53,18 +48,23 @@ footer {
   margin-top: 10px;
 }
 
-.social-icons {
+.socialIcons {
   display: flex;
   justify-content: center;
   display: none;
 }
 
-.social-icons img {
+.socialIcons img {
   height: 40px;
   width: 40px;
 }
 
-.social-icons a {
+.socialIcons a {
   align-items: center;
   margin-left: 10px;
+}
+
+.contentImage {
+  height: 5rem;
+  width: auto;
 }
