--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@ section h3 {
   margin-top: 0;
 }
 
+.navLinks {
+  margin-top: 30px;
+}
+
 .links {
   height: 50px;
   width: 50px;
@@ -37,9 +41,12 @@ section h3 {
   display: inline-block;
 }
 
-.currentPage img {
-  background-color: rgba(50, 170, 30, 0.4);
-  border-radius: 10px;
+.active {
+  rgba(0, 155, 0, 0.5)
+}
+
+.container ui-view {
+  padding: 40px;
 }
 
 footer {
